tests/errors/regex-unknown-class/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0130]: Unknown character class `bogus` in regular expression.
  │
  ├─𜱶 note: known classes: `any`, `digit`, `letter`, `whitespace`, `word`.
  │
1 │ def bad = `digit | bogus | letter`
  │                    ^^^^^
  ╰─𜱶 tests/errors/regex-unknown-class/main.pa:1:20
